ros2_ws/log/build_2025-02-10_18-52-53/object_detection_package/stdout_stderr.log
running egg_info
writing ../../build/object_detection_package/object_detection_package.egg-info/PKG-INFO
writing dependency_links to ../../build/object_detection_package/object_detection_package.egg-info/dependency_links.txt
writing entry points to ../../build/object_detection_package/object_detection_package.egg-info/entry_points.txt
writing requirements to ../../build/object_detection_package/object_detection_package.egg-info/requires.txt
writing top-level names to ../../build/object_detection_package/object_detection_package.egg-info/top_level.txt
reading manifest file '../../build/object_detection_package/object_detection_package.egg-info/SOURCES.txt'
adding license file 'LICENSE'
writing manifest file '../../build/object_detection_package/object_detection_package.egg-info/SOURCES.txt'
running build
running build_py
copying object_detection_package/yolo_detection.py -> /home/david-wang/Desktop/Projects/Wisconsin Robotics/ros2_ws/build/object_detection_package/build/lib/object_detection_package
running install
running install_lib
copying /home/david-wang/Desktop/Projects/Wisconsin Robotics/ros2_ws/build/object_detection_package/build/lib/object_detection_package/yolo_detection.py -> /home/david-wang/Desktop/Projects/Wisconsin Robotics/ros2_ws/install/object_detection_package/lib/python3.12/site-packages/object_detection_package
byte-compiling /home/david-wang/Desktop/Projects/Wisconsin Robotics/ros2_ws/install/object_detection_package/lib/python3.12/site-packages/object_detection_package/yolo_detection.py to yolo_detection.cpython-312.pyc
running install_data
running install_egg_info
  File "/home/david-wang/Desktop/Projects/Wisconsin Robotics/ros2_ws/install/object_detection_package/lib/python3.12/site-packages/object_detection_package/yolo_detection.py", line 14
    from .models import model.pt
                             ^
SyntaxError: invalid syntax

removing '/home/david-wang/Desktop/Projects/Wisconsin Robotics/ros2_ws/install/object_detection_package/lib/python3.12/site-packages/object_detection_package-0.0.0-py3.12.egg-info' (and everything under it)
Copying ../../build/object_detection_package/object_detection_package.egg-info to /home/david-wang/Desktop/Projects/Wisconsin Robotics/ros2_ws/install/object_detection_package/lib/python3.12/site-packages/object_detection_package-0.0.0-py3.12.egg-info
running install_scripts
Installing yolo_detection script to /home/david-wang/Desktop/Projects/Wisconsin Robotics/ros2_ws/install/object_detection_package/lib/object_detection_package
writing list of installed files to '/home/david-wang/Desktop/Projects/Wisconsin Robotics/ros2_ws/build/object_detection_package/install.log'
